--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot-plugin-deltaforce-simulator"
-version = "0.0.2"
+version = "1.0.0"
 description = "适用于nonebot的三角洲鼠鼠偷吃模拟器（开容器模拟器）机器人插件"
 authors = ["Alpaca <202396298@qq.com>"]
 license = "MIT"
@@ -12,8 +12,8 @@ nonebot2 = "^2.2.0"
 nonebot-adapter-onebot = "^2.2.1"
 nonebot-plugin-send-anything-anywhere = "^0.7.1"
 nonebot_plugin_userinfo = "^0.2.6"
-pillow = "^10.0" 
-httpx = "^0.27.0"
+pillow = ">=10.0" 
+httpx = ">=0.27.0"
 
 
 [[tool.poetry.source]]
